[SPIKE] Add github integration endpoints
